# introduction-reinforcement-learning

./: Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: repo-checks.yml
docs/: IMPLEMENTATION.md  READING_LIST.md  RL_RESEARCH_FRAMEWORK.md
src/chapter_2/: law_of_large_numbers.py
src/chapter_2/robbins_monro_algorithm/: convergence_of_constant.py  convergence_of_reciprocal.py
src/chapter_2/ten_armed_bandits/: action_reward_simulator.py  action_tracker.py  greedy_agent.py  reward_tracker.py  run.py  utils.py
src/chapter_3/expected_value/: sum_of_expected_values.py
src/chapter_3/gridworld/: README.md  action.py  main.py  reward.py  run.py  state.py  state_value_function.py
src/chapter_3/joint_distribution/: run.py
src/chapter_3/pole_balancing/: chatgpt_solution.py  discretization_config.py  main.py  state.py  state_action.py
src/chapter_4/gridworld/: README.md  action.py  grid.py  policy.py  reward.py  run.py  state.py
tests/unit/chapter_2/ten_armed_bandits/: test_action_reward_simulator.py  test_action_tracker.py  test_greedy_agent.py  test_reward_tracker.py  test_utils.py
tests/unit/chapter_3/gridworld/: test_main.py  test_reward.py  test_run.py  test_state.py
tests/unit/chapter_4/gridworld/: test_reward.py  test_run.py  test_state.py
