[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["gchu <gchu@zendesk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pyinstrument = "^4.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"

[tool.poetry.group.typing.dependencies]
pyright = "^1.1.317"
# Install jaxtyping for tensor if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 120
